--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
                         <div id="rate"><h1>$16.00</h1><span>/ month</span></div>
                     </div>
                     <div class="slider">
-                        <input type="range" name="" id="" min="0" max="100" value="50">
+                        <label class="range-label" for="range"></label>
+                        <input type="range" id="range" min="0" max="100" value="50">
                     </div>
                     <div class="toggle-section">
                         <p>Monthly Billing</p>
-                        <input type="checkbox" name="" id="checkbox" class="checkbox">
+                        <input type="checkbox"  id="checkbox" class="checkbox">
                         <label class="check-label" for="checkbox">
                             <div class="ball"></div>
                         </label>
