Fixed the interactive prices

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <div class="card">
                 <div class="section-1">
                     <div class="figures">
-                        <div>100K PAGEVIEWS</div>
-                        <div id="rate"><h1>$16.00</h1><span>/ month</span></div>
+                        <div><span id="views">100K</span> PAGEVIEWS</div>
+                        <div id="rate"><h1 id="price">$16.00</h1><span>/ month</span></div>
                     </div>
                     <div class="slider">
                         <label class="range-label" for="range"></label>
-                        <input type="range" id="range" min="0" max="100" value="50">
+                        <input type="range" id="range" min="0" max="100" step="20" value="100">
                     </div>
                     <div class="toggle-section">
                         <p>Monthly Billing</p>
